// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`(1) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`jsx
<div />
\`\`\`
"
`;

exports[`(2) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`jsx
import foo from "foo";

<div />;
\`\`\`
"
`;

exports[`(3) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`jsx
if (foo) {
  bar();
} else {
  baz();
}
\`\`\`
"
`;

exports[`(4) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`tsx
<div />
\`\`\`
"
`;

exports[`(5) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`tsx
import foo from "foo";

<div />;
\`\`\`
"
`;

exports[`(6) This plugin doesn't support markdown parser, so it leaves Prettier's output as is. 1`] = `
"\`\`\`tsx
if (foo) {
  bar();
} else {
  baz();
}
\`\`\`
"
`;
